[package]
name = "importance"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
version = "0.1.0"
edition = "2021"

# This is a rust port of https://github.com/zemlyansky/importance

[dependencies]
rand = "0.8.5"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

